  future releases. The error codes are meant to be easy to search for,
  and will allow error messages to be translated in the future.

* The `obnam-benchmark` program got rewritten so that it'll do
  something useful, but at the same time, it is no longer useful as a
  general tool. It is now expected to be run from the Obnam source
  tree (a cloned git repository), and isn't installed anymore.

Bug fixes:

* Obnam now creates a `trustdb.gpg` in the temporary GNUPGHOME it uses
  during encryption operations. From version 2.0.22 (or thereabouts),
  `gpg` insists on having a `trustdb.gpg` in the GNUPGHOME it uses.

Internal changes:

* The `obnamlib.Error` exception class has been replaced by the
  `obnamlib.ObnamError` class, which derives from the new
  `obnamlib.StructuredError` class. All new exceptions will need
  to be derived from `obnamlib.Error` in the future. Also, due to the
  way `StructuredError` works, it is now necessary to create a new
  exception class for each kind of error. This gives us unique the
  error codes mentioned above.

* The old `obnamlib.Repository` class is gone, and replaced with the
  `obnamlib.RepositoryInterface` class, which gets implemented for
  each repository format (there is only one, for now, but there will
  be more).

Version 1.6.1, released 2013-11-30
----------------------------------

* Fix Debian package dependencies correctly.

Version 1.6, released 2013-11-30
--------------------------------

* Stop logging paramiko exceptions that get converted into another
  type of exception by the SFTP plugin in Obnam.

* `obnam-benchmark` can now use an installed version of larch.
  Patch by Lars Kruse.

* Obnam has been ported to FreeBSD by Itamar Turner-Trauring
  of HybridCluster.

* Backup progress reporting now reports scanned file data, not just
  backed up file data. This will hopefully be less confusing to people.

* The `list-keys`, `client-keys`, and `list-toplevels` commands now