@@ -43,6 +43,11 @@ Version 1.7, released UNRELEASED
   general tool. It is now expected to be run from the Obnam source
   tree (a cloned git repository), and isn't installed anymore.
 
+* The log file now includes information about the transfer overhead to
+  the repository. Overhead is all the bytes that are not file content
+  data: filenames, permission bits, extended attributes, etc, plus
+  Obnam internal bookkeeping.
+
 Bug fixes:
 
 * Obnam now creates a `trustdb.gpg` in the temporary GNUPGHOME it uses
